--- a/Alzheimer Care/Info.plist
+++ b/Alzheimer Care/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>NSCameraUsageDescription</key>
+  <string>Tire uma foto sua</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Escolha uma foto sua</string>
 	<key>kTCCServiceMediaLibrary</key>
 	<string></string>
 	<key>NSAppleMusicUsageDescription</key>
